# project-fullstack-monolito

./: .gitignore  README.md  pyproject.toml
api/: app.py
api/v1/infra/: database.py  seeds.py
api/v1/modules/auth/controller/: generate_token.py
api/v1/modules/user/controller/: create_user.py  delete_user.py
api/v1/routers/: __init__.py
backend/: .env.example  database.db  pyproject.toml
backend/api/: app.py  security.py
backend/api/v1/conf/: settings.py
backend/api/v1/modules/user/controller/: get_user.py  update_user.py
backend/migrations/: env.py
backend/migrations/versions/: a7baecc21ccf_create_users_table.py
backend/tests/: conftest.py  test_auth.py
backend_tdd_fastapi/: app.py  routes.py  security.py
backend_tdd_fastapi/infra/: database.py  seeds.py
backend_tdd_fastapi/modules/auth/controller/: generate_token.py
backend_tdd_fastapi/modules/user/: routes.py  schemas.py
backend_tdd_fastapi/modules/user/controller/: create_user.py  delete_user.py  get_user.py  routes.py  update_user.py
backend_tdd_fastapi/modules/user/dto/: schemas.py
backend_tdd_fastapi/routers/: __init__.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Home.tsx
migrations/: env.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py
